metadata/force-app/main/default/objects/CustomName_DnGcT__c/CustomName_DnGcT__c.object-meta.xml
<CustomObject>
    <description>Description_MgYvd</description>
    <label>CustomLabel_mZeoZ</label>
    <nameField>
        <label>CustomLabel_mZeoZ</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_mZeoZs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>