metadata/force-app/main/default/objects/CustomName_DnGcT__c/fields/CustomField_pwSav__c.field-meta.xml
<CustomField>
    <fullName>CustomField_pwSav__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldTCiBr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>